# Archtype-Brian

./: CMakeLists.txt  README.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScopeComponent.h
